# metamodule-mockba-modular

./: .gitmodules  CMakeLists.txt  plugin-mm.json
MockbaModular/src/: Blank.cpp  CZDblSine.cpp  CZOsc.cpp  CZPulse.cpp  CZReso1.cpp  CZReso2.cpp  CZReso3.cpp  CZSaw.cpp  CZSawPulse.cpp  CZSquare.cpp  Countah.cpp  Dividah.cpp  DualAND.cpp  DualBUFFER.cpp  DualNAND.cpp  DualNOR.cpp  DualNOT.cpp  DualOR.cpp  DualXNOR.cpp  DualXOR.cpp  Feidah.cpp  FeidahS.cpp  Filtah.cpp  Holdah.cpp  MaugOsc.cpp  MaugSaw.cpp  MaugSaw2.cpp  MaugShark.cpp  MaugSquare.cpp  MaugSquare2.cpp  MaugSquare3.cpp  MaugTriangle.cpp  Mixah.cpp  Mixah3.cpp  MockbaModular.hpp  PSelectah.cpp  Pannah.cpp  ReVoltah.cpp  Selectah.cpp  Shapah.cpp  (+2 more)
metamodule-plugins/: MockbaModular-v2.0.0-dev13.0.mmplugin.mmplugin  MockbaModular.mmplugin
